<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hotelColor"
    android:orientation="vertical"
    tools:context="com.hsm.tourguideapp.HotelItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hospitalItemImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineLength"
            android:layout_margin="@dimen/marginComponents"
            android:background="@color/hotelLineColor" />

        <TextView
            android:id="@+id/hospitalItemNameTextView"
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginItems"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSubtitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1"
                    android:text="@string/addressText" />

                <TextView
                    android:id="@+id/hospitalItemAddressTextView"
                    style="@style/textSubtitleItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSubtitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1"
                    android:text="@string/costPerDayText" />

                <TextView
                    android:id="@+id/hospitalItemCostPerDayTextView"
                    style="@style/textSubtitleItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1" />
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSubtitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1"
                    android:text="@string/numStarsText" />

                <TextView
                    android:id="@+id/hotelItemNumStarsTextView"
                    style="@style/textSubtitleItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSubtitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1"
                    android:text="@string/phoneText" />
                />

                <TextView
                    android:id="@+id/hospitalItemPhoneTextView"
                    style="@style/textSubtitleItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginItems"
                    android:layout_weight="1" />
                />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginItems"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hospitalItemCallPhoneButton"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/callNowText" />

            <Button
                android:id="@+id/hospitalItemViewMapButton"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/viewMapText" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
